@@ -1,3 +1,4 @@
+* Add translated descriptor for Char and Text fields
 * Include row and column in error message when importing data
 * Remove support for ``:id`` suffix in import data
 * Add export translations option to trytond-admin
